[gd_scene load_steps=9 format=3 uid="uid://xcvchlcrwwfx"]

[ext_resource type="Theme" uid="uid://b7bhcsgyg3vwt" path="res://player/inventory/inventory_ui_theme.tres" id="1_bd7kl"]
[ext_resource type="Script" uid="uid://cweobukhiy0r6" path="res://player/inventory/inventory_view.gd" id="1_tvc4b"]
[ext_resource type="Texture2D" uid="uid://vbiyujls2cwo" path="res://player/inventory/battery_border.png" id="3_78iof"]
[ext_resource type="Texture2D" uid="uid://b17kg8b5el18k" path="res://player/inventory/battery_fill.png" id="4_cf14k"]

[sub_resource type="Animation" id="Animation_78iof"]
resource_name = "show"
length = 0.5
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cf14k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nutwa"]
resource_name = "hide"
length = 0.5
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yp6ve"]
_data = {
&"RESET": SubResource("Animation_cf14k"),
&"hide": SubResource("Animation_nutwa"),
&"show": SubResource("Animation_78iof")
}

[node name="InventoryView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_bd7kl")
script = ExtResource("1_tvc4b")

[node name="SlotContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="BatteryBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
step = 0.01
texture_under = ExtResource("3_78iof")
texture_progress = ExtResource("4_cf14k")
texture_progress_offset = Vector2(5, 5)

[node name="BatteryBarAnimation" type="AnimationPlayer" parent="BatteryBar"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_yp6ve")
}
